<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingStart="20dp">


    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingEnd="50dp"
        android:paddingRight="50dp"
        android:paddingTop="40dp"
        android:text="@string/spot_details_instruction"
        android:textSize="18sp" />

    <EditText

        android:id="@+id/water_depth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:ems="10"
        android:hint="@string/water_depth_in_m"
        android:inputType="number"
        android:text=""

        />

    <EditText
        android:id="@+id/species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/water_depth"
        android:ems="10"
        android:hint="@string/fish_species"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/species"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />


</RelativeLayout>
